nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-pvc
  template:
    metadata:
      labels:
        app: nginx-pvc
    spec:
      containers:
        - name: nginx
          image: nginx:1.28
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
            - name: config
              mountPath: /etc/nginx/conf.d
              readOnly: true
        - name: nginx-exporter
          image: nginx/nginx-prometheus-exporter:1.1.0
          args:
            - -nginx.scrape-uri=http://localhost/stub_status
          ports:
            - containerPort: 9113
              name: metrics
      volumes:
        - name: html
          persistentVolumeClaim:
            claimName: nginx-html-pvc
        - name: config
          configMap:
            name: nginx-metrics-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pvc-service
spec:
  type: NodePort
  selector:
    app: nginx-pvc
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 31888
    - name: metrics
      port: 9113
      targetPort: 9113
      nodePort: 31113
